don't know what happened

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -34,7 +34,7 @@ Received overcame oh sensible so at an. Formed do change merely to county it. Am
  <title>About me </title>
 
 
-<meta name="description" content="Describe your website" />
+<meta name="description" content="My life in pictures" />
 
 
 
