--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -33,7 +33,7 @@
  <title>Get in touch </title>
 
 
-<meta name="description" content="Describe your website" />
+<meta name="description" content="My life in pictures" />
 
 
 
