--- a/public/about/index.html
+++ b/public/about/index.html
@@ -145,7 +145,7 @@ Received overcame oh sensible so at an. Formed do change merely to county it. Am
 
     
     <li>
-      <a href="full%20profile%20url%20in%20github" data-animate-hover="pulse" class="github" target="_blank">
+      <a href="https://github.com/zhaalex" data-animate-hover="pulse" class="github" target="_blank">
         <i class="fa fa-github" title="github"></i>
         <span class="screen-reader-text">github</span>
       </a>
@@ -326,7 +326,7 @@ title="instagram icon"></i>
 
 
 <a class="github" target="_blank"
-href="full%20profile%20url%20in%20github">
+href="https://github.com/zhaalex">
 <i class="fa fa-github"
 title="github icon"></i>
 </a>
@@ -429,7 +429,7 @@ title="github icon"></i>
 
         
         <li>
-        <a href="full%20profile%20url%20in%20github"  class="github" target="_blank">
+        <a href="https://github.com/zhaalex"  class="github" target="_blank">
             <i class="fa fa-github" title="github"></i>
             <span class="screen-reader-text">github</span>
         </a>
