added to bio in configtoml

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -290,7 +290,7 @@ Received overcame oh sensible so at an. Formed do change merely to county it. Am
     </div>
     <div class="bio">
       
-      <p>Current computer science/jazz studies student at the University of Michigan.  Avid </p>
+      <p>Current computer science/jazz studies student at the University of Michigan.  Avid amateur photographer.</p>
       
 
 
