--- a/public/index.html
+++ b/public/index.html
@@ -383,7 +383,7 @@
 					</div>
 					<div class='excerpt-header'>
 						<h2 class='excerpt-title'>
-							<a href="/post/jazzpost/ "> More with Less - Spread Thin </a>
+							<a href="/post/jazzpost/ "> More with Less - Spread Thin (in progress) </a>
 						</h2>
 					</div>
 					<div class='excerpt-content'>
